--- a/client/package.json
+++ b/client/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.1.3",
+    "bootstrap": "^5.2.2",
     "bulma": "^0.9.4",
     "knex": "^2.3.0",
     "mysql": "^2.18.1",
@@ -14,6 +15,7 @@
     "nodemon": "^2.0.19",
     "nth-check": "^2.1.1",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.5.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
