--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
     "axios": "^1.1.3",
     "bootstrap": "^5.2.2",
     "bulma": "^0.9.4",
+    "cors": "^2.8.5",
     "knex": "^2.3.0",
     "mysql": "^2.18.1",
     "mysql2": "^2.3.3",
@@ -23,6 +24,7 @@
     "styled-components": "^5.3.5",
     "web-vitals": "^2.1.4"
   },
+  "proxy": "http://localhost:3001/",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
