--- a/client/package.json
+++ b/client/package.json
@@ -7,10 +7,13 @@
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.1.3",
+    "bcrypt": "^5.1.0",
     "bootstrap": "^5.2.2",
     "bulma": "^0.9.4",
     "cors": "^2.8.5",
+    "jwt-decode": "^3.1.2",
     "knex": "^2.3.0",
+    "loader-utils": ">=2.0.3",
     "mysql": "^2.18.1",
     "mysql2": "^2.3.3",
     "nodemon": "^2.0.19",
@@ -22,8 +25,7 @@
     "react-scripts": "5.0.1",
     "remixicon": "^2.5.0",
     "styled-components": "^5.3.5",
-    "web-vitals": "^2.1.4",
-    "loader-utils": ">=2.0.3"
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
