--- a/client/package.json
+++ b/client/package.json
@@ -22,11 +22,11 @@
     "react-dom": "^18.2.0",
     "react-loader-spinner": "^5.3.4",
     "react-loading": "^2.0.3",
-    "react-lottie": "^1.2.3",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "remixicon": "^2.5.0",
     "styled-components": "^5.3.5",
+    "video-react": "^0.16.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
