--- a/client/package.json
+++ b/client/package.json
@@ -6,16 +6,19 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "@types/react-transition-group": "^4.4.5",
     "axios": "^1.1.3",
     "bootstrap": "^5.2.2",
     "bulma": "^0.9.4",
     "cors": "^2.8.5",
+    "install": "^0.13.0",
     "jwt-decode": "^3.1.2",
     "knex": "^2.3.0",
     "loader-utils": ">=2.0.3",
     "mysql": "^2.18.1",
     "mysql2": "^2.3.3",
     "nodemon": "^2.0.19",
+    "npm": "^9.1.2",
     "nth-check": "^2.1.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.5.0",
