--- a/client/package.json
+++ b/client/package.json
@@ -21,11 +21,13 @@
     "nth-check": "^2.1.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.5.0",
+    "react-charts": "^3.0.0-beta.51",
     "react-dom": "^18.2.0",
     "react-loader-spinner": "^5.3.4",
     "react-loading": "^2.0.3",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "react-tabs": "^6.0.0",
     "remixicon": "^2.5.0",
     "styled-components": "^5.3.5",
     "video-react": "^0.16.0",
